UPDATE ROSYLEN REMOVING EFFECT

--- a/OnlineContacts.WEB/Views/Contacts/Index.cshtml
+++ b/OnlineContacts.WEB/Views/Contacts/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using OnlineContacts.shared.Resources
 @{
-    ViewBag.Title = $"{OnlineContactsResources.Contacts}";
+    ViewBag.Title = OnlineContactsResources.Contacts;
 }
 
 <div class="row" id="ContactInfo">
