--- a/OnlineContacts.WEB/Views/Shared/_Layout.cshtml
+++ b/OnlineContacts.WEB/Views/Shared/_Layout.cshtml
@@ -66,14 +66,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink($"{@OnlineContactsResources.ApplicationName}", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink(OnlineContactsResources.ApplicationName, "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                    
                     @if (Request.IsAuthenticated)
                     {
-                        <li>@Html.ActionLink($"{@OnlineContactsResources.Contacts}", "index", "Contacts")</li>
+                        <li>@Html.ActionLink(OnlineContactsResources.Contacts, "index", "Contacts")</li>
                     }
 
                     <li>
