--- a/OnlineContacts.WEB/Views/Account/Register.cshtml
+++ b/OnlineContacts.WEB/Views/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@using OnlineContacts.shared.Resources
 @model OnlineContacts.Models.Identity.RegisterViewModel
 @{
-    ViewBag.Title = $"{OnlineContactsResources.Register}";
+    ViewBag.Title = OnlineContactsResources.Register;
 }
 
 <h2>@ViewBag.Title.</h2>
